--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 
 
   <!-- ضع العنوان الخاص بك هنا  -->
-  <title> غير هذا النص </title>
-  <meta name="title" content="غير هذا النص">
-  <meta property="twitter:title" content="غير هذا النص">
-  <meta property="og:title" content="غير هذا النص">
+  <title> Messenger </title>
+  <meta name="title" content="Messenger">
+  <meta property="twitter:title" content="Messenger">
+  <meta property="og:title" content="Messenger">
 
 
   <!-- ضع الوصف الخاص بك هنا  -->
-  <meta name="description" content="غير هذا النص">
-  <meta property="og:description" content="غير هذا النص">
-  <meta property="twitter:description" content="غير هذا النص">
+  <meta name="description" content="Messenger">
+  <meta property="og:description" content="Messenger">
+  <meta property="twitter:description" content="Messenger">
 
   <!-- ضع الرابط المرفوع عليه الموقع -->
   <meta property="og:url" content="ضع الرابط كامل">
